--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tiket",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://artatix.co.id",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -9,7 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
