--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tiket",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://artatix.co.id",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
